cmake_minimum_required(VERSION 3.9)
project(binary_search_tree_ivonnegattringer)

set(CMAKE_CXX_STANDARD 11)

add_executable(binary_search_tree_ivonnegattringer
        bst.cpp
        bst.h
        bst_test_driver.cpp
        general.cpp
        general.h
        mainpage.h
        shortcut.cpp
        shortcut.h
        test_bst.cpp
        test_bst.h)
